--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="author" content="Роман Кривопалов">
   <meta name="keywords" content="HTML, CSS, JavaScript, JS, Mesto">
   <meta name="description" content="Интерактивный сервис Mesto, веб-разработчик Роман Кривопалов">
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
   <title>Mesto</title>
 </head>
   <body class="page">
